# gorm-goLang

./: .dockerignore  .env.example  .gitignore  DOCKER_SETUP.md  Dockerfile  Dockerfile.coach  MONITORING_UPDATE_PLAN.md  Makefile  README.md  UM6P_FIT_Scope_Definition.md  USER_SIDE_COMPLETION_PLAN.md  autoresearch.jsonl  coach_demo_app.py  dash_plan.md  docker-compose.coach.yml  docker-compose.frontend.yml  docker-compose.rag.yml  docker-compose.yml  front_end_plan.md  go.mod  go.sum  main.go  middleware_plan.md  mixed_protocol_server.go  next_steps_plan.md  next_stepz.md  oauth_vs_bcrypt_analysis.md  roadmap_plan.md  test_api.py  test_db.py  test_phases_7_21.py  test_rag_api.py  tls_support.go  tls_support_test.go  todo.md  todo.txt
api/: admin_handlers.go  admin_handlers_internal_test.go  admin_realtime_hub.go  admin_user_handlers.go  admin_user_handlers_internal_test.go  auth.go  auth_handlers.go  auth_test.go  auth_validation.go  cardio_handlers.go  cardio_handlers_test.go  chat_handlers.go  chat_handlers_test.go  docs.go  exercise_handlers.go  exercise_handlers_internal_test.go  export_handlers.go  export_handlers_test.go  food_handlers.go  food_import_handlers.go  friendship_handlers.go  helpers.go  leaderboard_handlers.go  leaderboard_handlers_test.go  login.html  meal_food_handlers.go  meal_handlers.go  meal_reuse_handlers.go  meal_reuse_handlers_test.go  middleware.go  middleware_internal_test.go  notification_handlers.go  openapi.yaml  (+23 more)
rag_setup/app/: .dockerignore  Dockerfile  README.md  ingest.py  main.py  pyproject.toml  shared.py  wait_for_qdrant.py
(+137 files in other folders)
